--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,15 @@
       rel="stylesheet"
     />
     <title>React App</title>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/9bf94860b7.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-root"></div>
+    <div id="modal-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
